--- a/ant-data/src/main/resources/application-dev.properties
+++ b/ant-data/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 #   \u7AEF\u53E3\u914D\u7F6E
-#server.port=7001
-server.port=${random.int[7001,7999]}
+server.port=7001
+#server.port=${random.int[7001,7999]}
 #   \u670D\u52A1\u540D\u914D\u7F6E
 spring.application.name=ant-data
 
