优化项目，添加logback配置

--- a/ant-back/src/main/resources/application-dev.properties
+++ b/ant-back/src/main/resources/application-dev.properties
@@ -10,6 +10,7 @@ eureka.client.service-url.defaultZone=http://localhost:6001/eureka/
 
 #   \u65E5\u5FD7\u914D\u7F6E
 logging.level.com.example.ant=debug
+logging.config=classpath:xml/logback-boot.xml
 
 #   \u65AD\u8DEF\u5668\u5F00\u542F
 feign.hystrix.enabled=true
