--- a/ant-data/src/main/resources/application-dev.properties
+++ b/ant-data/src/main/resources/application-dev.properties
@@ -10,6 +10,7 @@ eureka.client.service-url.defaultZone=http://localhost:6001/eureka/
 
 #   \u65E5\u5FD7\u914D\u7F6E
 logging.level.com.example.ant=debug
+logging.config=classpath:xml/logback-boot.xml
 
 
 #   \u6570\u636E\u6E90system\u914D\u7F6E
